Viewer: color contrast fix

--- a/ui/apps/io.ox/core/viewer/style.less
+++ b/ui/apps/io.ox/core/viewer/style.less
@@ -137,8 +137,8 @@
                 right: 0;
                 margin: auto;
                 bottom: 40px;
-                height: 40px;
-                line-height: 40px;
+                height: 2rem;
+                line-height: 2rem;
                 width: 100px;
                 text-align: center;
                 background: rgba(0,0,0,0.5);
@@ -149,7 +149,7 @@
         }
 
         .carousel-control {
-            opacity: 0.3;
+            color: #777777;
             background: none;
             i {
                 position: absolute;
@@ -161,8 +161,7 @@
             &.right i { right: 20px; }
             &:hover,
             &:focus {
-                opacity: 1;
-                background: none;
+                color: #FFFFFF;
             }
         }
 
